--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crm_workroom",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -10,17 +11,19 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next": "^15.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "sass": "^1.80.6",
-    "typescript": "^5"
+    "eslint-config-next": "13.4.0",
+    "sass": "^1.80.7",
+    "sass-loader": "^16.0.3",
+    "typescript": "^5",
+    "webpack": "^5.96.1"
   }
 }
