--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-query-devtools": "^5.60.5",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "next": "^15.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^9.1.2",
     "react-select": "^5.8.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.4.0",
-    "sass": "^1.80.7",
+    "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "typescript": "^5",
     "webpack": "^5.96.1"
