--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "next": "^15.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.3",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
-    "@types/node": "^20.17.6",
+    "@types/node": "^22.10.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "13.4.0",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.0.3",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "typescript": "^5",
