--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
-    "react-select": "^5.8.3",
-    "react-toastify": "^10.0.6"
+    "react-select": "^5.8.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.0",
