--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
-    "react-select": "^5.8.3"
+    "react-select": "^5.8.3",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "@types/node": "^22.10.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.3",
     "eslint-config-prettier": "^9.1.0",
