--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
     "typescript": "^5",
