--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.3",
