--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "globals": "^15.13.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
-    "sass": "^1.81.0",
-    "sass-loader": "^16.0.3",
+    "npm-force-resolutions": "^0.0.10",
+    "sass": "^1.83.0",
+    "sass-loader": "^13.3.3",
     "typescript": "^5",
     "typescript-eslint": "^8.17.0",
-    "webpack": "^5.96.1"
+    "webpack": "^5.97.1"
   }
 }
